--- a/assets/style.css
+++ b/assets/style.css
@@ -3,13 +3,13 @@ body {
     z-index: 1;
     display: flex;
     justify-content: center;
+    font-family: 'Outfit', sans-serif;
 }
 
 #container {
     background-color: white;
     z-index: 999;
     width: 50%;
-    height: 100vh;
     border-radius: 30px;
 }
 
@@ -45,8 +45,10 @@ body {
     align-items: flex-start;
     width: 90%;
     margin: 0 auto;
+    margin-top: 1rem;
     border-radius: 30px;
     background-color: hsl(330, 100%, 98%);
+    padding: 0.5rem;
 }
 
 .inner-prepTime h2,
@@ -65,4 +67,104 @@ ul {
 .inner-prepTime-lists {
     margin-top: 0;
     line-height: 1.6;
+}
+
+.inner-ingredients {
+    width: 90%;
+    margin: 0 auto;
+    border-bottom: 1px solid #ddd;
+}
+
+.inner-ingredients h2 {
+    font-size: 2.1rem;
+    color: hsl(14, 45%, 36%);
+    margin-bottom: 0;
+    margin-top: 1.3rem;
+}
+
+.inner-ingredients ul {
+    line-height: 1.9;
+    margin-left: 0;
+    padding: 0 1rem;
+    color: hsl(14, 45%, 36%);
+
+}
+
+.inner-ingredients ul li {
+    padding: 0 1rem;
+}
+
+.inner-instructions {
+    width: 90%;
+    margin: 0 auto;
+    border-bottom: 1px solid #ddd;
+}
+
+.inner-instructions h2 {
+    font-size: 2.1rem;
+    color: hsl(14, 45%, 36%);
+}
+
+.inner-instructions-orderLists {
+    margin-left: 0;
+    padding: 0 1rem;
+    margin: 1rem 0;
+    color: hsl(14, 45%, 36%);
+    font-weight: bold;
+}
+
+
+.inner-instructions-orderLists li {
+    padding: 0 1rem;
+    margin-bottom: 0.6rem;
+    line-height: 1.4;
+}
+
+.inner-instructions-orderLists li strong {
+    font-size: 1.1rem;
+}
+
+
+.inner-instructions-orderLists li span {
+    font-weight: 400;
+}
+
+.inner-nutrition {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0;
+    margin-bottom: 2rem;
+}
+
+.inner-nutrition h2 {
+    width: 90%;
+    margin: 1.3rem auto;
+    font-size: 2.1rem;
+    color: hsl(14, 45%, 36%);
+}
+
+.inner-nutrition span {
+    width: 90%;
+    margin: 0 auto;
+}
+
+table {
+    margin-top: 1rem;
+    color: hsl(14, 45%, 36%);
+    text-align: left;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+}
+
+table tr th {
+    padding: 1rem;
+    border-bottom: 1px solid #ddd;
+}
+
+table tr th {
+    font-weight: 400;
+}
+
+table tr th strong {
+    font-weight: bold;
 }
